Add comment and make zsh-syntax use $HOME (fzf use home anyways)

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# brew install reattach-to-user-namespace
+# or tmux will exit, leaving 1;2c in iTerm2
+
 set -g base-index 1
 
 set-option -g default-shell /bin/zsh
