--- a/tmux.conf
+++ b/tmux.conf
@@ -12,14 +12,21 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+bind -r h resize-pane -L 20
+bind -r j resize-pane -D 20
+bind -r k resize-pane -U 20
+bind -r l resize-pane -R 20
+
+# relocate splits (this is indenpent of the selected pane lol)
+# but doesn't work on my workstation...
+bind-key -n M-Left  resize-pane -L 20
+bind-key -n M-Down  resize-pane -D 20
+bind-key -n M-Up    resize-pane -U 20
+bind-key -n M-Right resize-pane -R 20
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
+bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
