--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 # or tmux will exit, leaving 1;2c in iTerm2
 
 set -g base-index 1
+set -g status-right '#(tmux-mem --format ":currentBytes [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]") #(tmux-cpu --format ":load [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]")'
 
 set-option -g default-shell /bin/zsh
 set-option -g default-command "reattach-to-user-namespace -l zsh"
@@ -64,3 +65,10 @@ bind C-a send-prefix
 unbind C-b
 
 set-option -g mouse on
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
