--- a/tmux.conf
+++ b/tmux.conf
@@ -2,15 +2,15 @@
 # or tmux will exit, leaving 1;2c in iTerm2
 
 set -g base-index 1
-set -g status-right '#(tmux-mem --format ":currentBytes [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]") #(tmux-cpu --format ":load [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]")'
+set -g status-right '[#{iptmthd}] #{wifi_ssid} #{wifi_icon} #(tmux-mem --format ":currentBytes [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]") #(tmux-cpu --format ":load [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]")'
 
 set-option -g default-shell /bin/zsh
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-window-option -g mode-keys vi
 set-option -sg escape-time 10
 
-bind-key | split-window -h
-bind-key - split-window -v
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 
 # Vim style pane selection
 bind -r h resize-pane -L 20
@@ -68,7 +68,11 @@ set-option -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'gmoe/tmux-wifi'
 set -g @resurrect-strategy-nvim 'session'
+set -g @plugin 'ki-chi/tmux-inputmethod'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.tmux/plugins/tmux-wifi/tmux-wifi.tmux
