--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,11 @@ set-option -sg escape-time 10
 bind-key | split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
 
+# set active colors
+set -g window-style ''
+set -g window-active-style ''
+set -g pane-active-border-style 'bg=colour220'
+
 # Vim style pane selection
 bind -r h resize-pane -L 20
 bind -r j resize-pane -D 20
