Listing yarn global add dependency for tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 # or tmux will exit, leaving 1;2c in iTerm2
 
 set -g base-index 1
+# Install dependencies by: $ yarn global add tmux-mem tmux-cpu
 set -g status-right '[#{iptmthd}] #{wifi_ssid} #{wifi_icon} #(tmux-mem --format ":currentBytes [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]") #(tmux-cpu --format ":load [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]")'
 
 set-option -g default-shell /bin/zsh
