Increase tmux history limit

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ set -g window-style ''
 set -g window-active-style ''
 set -g pane-active-border-style 'bg=colour220'
 
+# increase history limit
+set -g history-limit 30000
+
 # Vim style pane selection
 bind -r h resize-pane -L 20
 bind -r j resize-pane -D 20
