--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 
 set -g base-index 1
 # Install dependencies by: $ yarn global add tmux-mem tmux-cpu
-set -g status-right '[#{iptmthd}] #{wifi_ssid} #{wifi_icon} #(tmux-mem --format ":currentBytes [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]") #(tmux-cpu --format ":load [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]")'
+# set -g status-right '[#{iptmthd}] #{wifi_ssid} #{wifi_icon} #(tmux-mem --format ":currentBytes [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]") #(tmux-cpu --format ":load [#[fg=:color]:spark#[default]] #[fg=:color]:percent#[default]")'
 
 set-option -g default-shell /bin/zsh
 set-option -g default-command "reattach-to-user-namespace -l zsh"
@@ -80,6 +80,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'gmoe/tmux-wifi'
 set -g @resurrect-strategy-nvim 'session'
+set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'ki-chi/tmux-inputmethod'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
